--- a/mainpage.html
+++ b/mainpage.html
@@ -14,7 +14,7 @@
 </body>
 
 <footer>
-    League of Legends is a registered trademark of Riot Games, Inc. We are in no way affiliated with , associated or endorsed by Riot Games, Inc. © 2017-2019 L9EloBoosting.com | All Rights Reserved
+    League of Legends is a registered trademark of Riot Games, Inc. We are in no way affiliated with , associated or endorsed by Riot Games, Inc.| All Rights Reserved
 </footer>
 
 </html>
