--- a/mainpage.html
+++ b/mainpage.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="mainpage.js"></script>
     <link rel="stylesheet" href="mainpage.css">
+    <script src="homebar.js"></script>
     <title>eboost.org</title>
 </head>
 <body>
