--- a/mainpage.html
+++ b/mainpage.html
@@ -18,4 +18,9 @@
     League of Legends is a registered trademark of Riot Games, Inc. We are in no way affiliated with , associated or endorsed by Riot Games, Inc.| All Rights Reserved
 </footer>
 
+
+<script>
+    setup();
+</script>
+
 </html>
