--- a/mainpage.html
+++ b/mainpage.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     Kys elias ingen bryr seg om deg
-    <home-bar>
-        
+    <home-bar title="Nettbutikk" info="Kampanje! Salg!" username="Ole Olsen">
     </home-bar>
     
 
