--- a/mainpage.html
+++ b/mainpage.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     Kys elias ingen bryr seg om deg
-    <home-bar title="Nettbutikk" info="Kampanje! Salg!" username="Ole Olsen">
+    <home-bar menu="Nettbutikk" info="Kampanje! Salg!" username="Ole Olsen" heading="" crumb="">
     </home-bar>
     
 
