--- a/mainpage.html
+++ b/mainpage.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     Kys elias ingen bryr seg om deg
-    <home-bar menu="Nettbutikk" info="Kampanje! Salg!" username="Ole Olsen" heading="" crumb="">
+    <home-bar menu="Home" heading="Jepp" crumb="Ops" username="Ole Olsen" info="Kampanje! Salg!"
     </home-bar>
     
 
