--- a/mainpage.html
+++ b/mainpage.html
@@ -11,9 +11,10 @@
 </head>
 <body>
     Kys elias ingen bryr seg om deg
-    <home-bar menu="Home" heading="Game" crumb="Ops" username="Ole Olsen" info="Contact"
+    <home-bar menu="Home" heading="Game" info="Contact"
     </home-bar>
     
+
 
 </body>
 
