--- a/mainpage.html
+++ b/mainpage.html
@@ -7,13 +7,13 @@
     <script src="mainpage.js"></script>
     <link rel="stylesheet" href="mainpage.css">
     <script src="homebar.js"></script>
+    <script src="butikk.js"></script>
     <title>eboost.org</title>
 </head>
 <body>
     <home-bar menu="Home" heading="Game" info="Contact"
     </home-bar>
     
-sadf
 
 </body>
 
