--- a/mainpage.html
+++ b/mainpage.html
@@ -11,9 +11,10 @@
     <title>eboost.org</title>
 </head>
 <body>
-    <home-bar menu="Home" heading="Game" info="Contact"
-    </home-bar>
-    
+    <home-bar menu="Home" heading="Game" info="Contact"></home-bar>
+
+    <div id="lol"></div>
+    <div id="csgo"></div>
 
 </body>
 
