--- a/mainpage.html
+++ b/mainpage.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="mainpage.js"></script>
     <link rel="stylesheet" href="mainpage.css">
+    <link rel="stylesheet" href="csgo.html">
+    <link rel="stylesheet" href="league.html">
     <script src="homebar.js"></script>
     <script src="butikk.js"></script>
+
     <title>eboost.org</title>
 </head>
 <body>
