--- a/csgo.html
+++ b/csgo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CSGO</title>
+    <title>eboost CS:GO</title>
 </head>
 <body>
     sadwasdw
