--- a/mainpage.html
+++ b/mainpage.html
@@ -14,7 +14,7 @@
     <title>eboost.org</title>
 </head>
 <body>
-    <home-bar menu="Home" heading="Game" info="Contact"></home-bar>
+    <home-bar menu="Game" heading="Home" info="Contact"></home-bar>
 
     <div id="lol"></div>
     <div id="csgo"></div>
