--- a/csgo.html
+++ b/csgo.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="csgo.css">
+    <script src="homebar.js"></script>
+    <script src="butikk.js"></script>
     <title>eboost CS:GO</title>
 </head>
 <body>
+        <home-bar menu="Home" heading="Home" info="Contact"></home-bar>
+
     sadwasdw
 </body>
+
+<script>
+    setup();
+</script>
+
 </html>
