--- a/mainpage.html
+++ b/mainpage.html
@@ -19,7 +19,10 @@
     <div id="lol"></div>
     <div id="csgo"></div>
 
+    <p>We are a eloboosting site that specializes in League of Legends and CS:GO. Our boosters are Global Elite in CS:GO and Masters+ in League of Legends.</p>
+
 </body>
+
 
 <footer>
     League of Legends is a registered trademark of Riot Games, Inc. We are in no way affiliated with, associated or endorsed by Riot Games, Inc.| All Rights Reserved
