--- a/lol.html
+++ b/lol.html
@@ -6,8 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Game</title>
     <script src="butikk.js"></script>
+    <link rel="stylesheet" href="lol.css">
 </head>
 <body>
-    <p> asdfwasdlwllsssw</p>
+    <div id="SOLOBOOST">
+        <H3>SOLO boosting</h3>
+        <p>One of our "Professional Booster" will log and play in your account.</p>
+    </div>
+        
+    <div id="DUOBOOST">
+        <h3>DUO boosting</h3>
+        <p>One of our "Professional Boosters" will play side by side with you on a similar rank account.</p>
+    </div>
 </body>
 </html>
