--- a/lol.html
+++ b/lol.html
@@ -7,8 +7,12 @@
     <title>Game</title>
     <script src="butikk.js"></script>
     <link rel="stylesheet" href="lol.css">
+    <script src="homebar.js"></script>
 </head>
 <body>
+
+        <home-bar menu="Home" heading="Home" info="Contact"></home-bar>
+
     <div id="SOLOBOOST">
         <H3>SOLO boosting</h3>
         <p>One of our "Professional Booster" will log and play in your account.</p>
@@ -19,4 +23,9 @@
         <p>One of our "Professional Boosters" will play side by side with you on a similar rank account.</p>
     </div>
 </body>
+
+
+<script>
+    setup();
+</script>
 </html>
