--- a/lol.html
+++ b/lol.html
@@ -10,21 +10,12 @@
     <script src="homebar.js"></script>
 </head>
 <body>
-
-        <home-bar menu="Home" heading="Home" info="Contact"></home-bar>
-
-    <div id="SOLOBOOST">
-        <H3>SOLO boosting</h3>
-        <p>One of our "Professional Booster" will log and play in your account.</p>
+   <home-bar menu="Home" heading="Home" info="Contact"></home-bar>
+    <div class="LOLBOOST">
+        <div class="gridBOOST-left">SOLO boost</div>
+        <div class="gridBOOST-right">DUO boost</div>
+        <p></p>
     </div>
-        
-    <div id="DUOBOOST">
-        <h3>DUO boosting</h3>
-        <p>One of our "Professional Boosters" will play side by side with you on a similar rank account.</p>
-    </div>
-</body>
-
-
 <script>
     setup();
 </script>
