--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="homebar.js"></script>
     <title></title>
 </head>
 <body>
@@ -13,4 +14,9 @@
         <p>Contact e-mail: contact@eboost.org </p>
     
 </body>
+
+<script>
+        setup();
+</script>
+
 </html>
