--- a/mainpage.html
+++ b/mainpage.html
@@ -7,6 +7,7 @@
     <script src="mainpage.js"></script>
     <link rel="stylesheet" href="mainpage.css">
     <link rel="stylesheet" href="csgo.html">
+    <link rel="stylesheet" href="contact.html">
     <script src="homebar.js"></script>
     <script src="butikk.js"></script>
 
