--- a/contact.html
+++ b/contact.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
     <script src="homebar.js"></script>
-    <title></title>
+    <script src="butikk.js"></script>
 </head>
 <body>
-
         <home-bar menu="Home" heading="Home" info="Contact"></home-bar>
 
-        <p>Contact e-mail: contact@eboost.org </p>
-    
 </body>
-
 <script>
-        setup();
+setup();
 </script>
-
 </html>
